@@ -66,14 +66,15 @@ class RPackageView {
 
    bool hasSelection() { return _hasSelection; };
    string getSelected() { return _selectedName; };
-   bool setSelected(string name);
+   virtual bool setSelected(string name);
+
    void showAll() { 
       _selectedView = _all; 
       _hasSelection = false;
       _selectedName.clear();
    };
 
-   vector<string> getSubViews();
+   virtual vector<string> getSubViews();
 
    virtual string getName() = 0;
    virtual void addPackage(RPackage *package) = 0;
@@ -143,11 +144,17 @@ class RPackageViewStatus:public RPackageView {
 };
 
 class RPackageViewSearch : public RPackageView {
- protected:
-   vector<string> searchStrings;
-   string searchName;
-   int searchType;
+   
+   struct searchItem {
+      vector<string> searchStrings;
+      string searchName;
+      int searchType;
+   };
+   // the search history
+   map<string, searchItem> searchHistory;
+   searchItem _currentSearchItem;
    int found; // nr of found pkgs for the last search
+
  public:
    RPackageViewSearch(vector<RPackage *> &allPkgs) 
       : RPackageView(allPkgs), found(0) {};
@@ -158,6 +165,10 @@ class RPackageViewSearch : public RPackageView {
    string getName() {
       return _("Search History");
    };
+
+   // return search history here
+   virtual vector<string> getSubViews();
+   virtual bool setSelected(string name);
 
    void addPackage(RPackage *package);
 
