@@ -4,6 +4,8 @@ synaptic (0.63.1) UNRELEASEDunstable; urgency=low
     - Updated pt_BR.po, thanks to Sergio Cipolla (closes: #561853)
   * po/sk.po:
     - Updated sk.po, thanks to helix84 (closes: #559283)
+  * common/rpackageview.{cc,h}:
+    - remember search history accross package transactions
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Dec 2009 10:22:56 +0100
 
